===================================
Leeway Changelog
===================================

Version 1.1.4
-----------------------------------
[changed] all h2 post and page titles to h1 for better SEO
[fixed] postmeta styling for widget bundle

Version 1.1.3
-----------------------------------
[added] escaping for translation strings for improved security

Version 1.1.2
-----------------------------------
[added] postmeta setting to Category Posts Boxed widget
[added] postmeta setting to Category Posts Columns widget
[added] postmeta setting to Category Posts Grid widget

Version 1.1.1
-----------------------------------
[moved] additional functions from functions.php to extras.php and template-tags.php
[added] theme support for Widget Bundle Addon Plugin
[removed] fallback solution for new title tag feature of WordPress
[removed] function_exists wrappers for action hook functions
[changed] implementation of threaded comments javascript

Version 1.1.0
-----------------------------------
[moved] register_widget functions to widgets_init action hook to fix widget translation
[improved] customizer sections to be translation-ready
[updated] German translation file

Version 1.0.9
-----------------------------------
[improved] code of 404.php and search.php templates
[improved] phrasing of all translatable text strings
[updated] translation files

Version 1.0.8
-----------------------------------
[fixed] deprecating PHP4 style constructors notices in WordPress 4.3

Version 1.0.7
-----------------------------------
[added] setting for deactivating default google fonts in case they are not compatible with user language
[added] translation files for Dutch, Italian and Spanish

Version 1.0.6
-----------------------------------
[changed] search title HTML markup in search.php
[changed] archive titles to use the new the_archive_title() function
[removed] unnecessary template files tag.php, category.php and author.php

Version 1.0.5
-----------------------------------