@@ -20,8 +20,7 @@ function leeway_enqueue_scripts() {
 	wp_enqueue_script('leeway-jquery-navigation', get_template_directory_uri() .'/js/navigation.js', array('jquery'));
 		
 	// Register and Enqueue FlexSlider JS and CSS if necessary
-	if ( ( isset($theme_options['slider_active_blog']) and $theme_options['slider_active_blog'] == true )
-		|| ( isset($theme_options['slider_active_magazine']) and $theme_options['slider_active_magazine'] == true ) ) :
+	if ( true == $theme_options['slider_active_blog'] or true == $theme_options['slider_active_magazine'] or is_page_template('template-slider.php') ) :
 
 		// FlexSlider CSS
 		wp_enqueue_style('leeway-flexslider', get_template_directory_uri() . '/css/flexslider.css');
