@@ -4,6 +4,7 @@ Leeway Changelog
 
 Version 1.1.4
 -----------------------------------
+[added] Post Slider page template
 [changed] all h2 post and page titles to h1 for better SEO
 [fixed] postmeta styling for widget bundle
 
